# meshcraft

./: README.md  pyproject.toml
axentx_product/: __init__.py  utils.py
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: meshcraft.py  security_policy.py
tests/: test_meshcraft.py  test_security_policy.py  test_utils.py
