[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "axentx-product"
version = "0.1.0"
description = "A tiny utility library for demonstration purposes."
authors = [{name = "Axentx Team", email = "team@axentx.com"}]
requires-python = ">=3.8"
license = {text = "MIT"}
